<resources>
    <string name="app_name">GUI_Exercises</string>
    <string name="btn_1">Button 1</string>
    <string name="btn_2">Button 2</string>
    <string name="btn_3">Button 3</string>
    <string name="btn_4">Button 4</string>
    <string name="btn_5">Button 5</string>
    <string name="btn_6">Button 6</string>
    <string name="btn_7">Button 7</string>
    <string name="btn_8">Button 8</string>
    <string name="btn_9">Button 9</string>
</resources>
